working search bar with unformatted results, got rid of the network call and sections for now.

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: rgb(53, 54, 58)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header>DnD 5E API</header>
+    <!-- <header>DnD 5E API</header> -->
     <div id="root"></div>
   </body>
 </html>
