--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -23,9 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>D&D 5E App</title>
   </head>
-  <body style="background-color: rgb(53, 54, 58)">
+  <body style="background-color: rgb(53, 54, 58);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- <header>DnD 5E API</header> -->
     <div id="root"></div>
