--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     -->
     <title>D&D 5E App</title>
   </head>
-  <body style="background-color: rgb(53, 54, 58);">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- <header>DnD 5E API</header> -->
     <div id="root"></div>
